[package]
name = "advent"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2", features = ["yaml"]}
dirs = "4"
failure = "0.1"
reqwest = "0.11"
tokio = {version = "1", features = ["full"]}
itertools = "0.10"
num = "0.4"
nom = "7.1"
termion = "*"
color-eyre = "0.5"